- corrected package: ..bockstore -> ..boockstorecn
- Minor Fix in pom so that jacoco is used without tcp server